[gd_scene load_steps=7 format=3 uid="uid://c7t4osrimo6y6"]

[ext_resource type="LabelSettings" uid="uid://gh8y4uqq4gu6" path="res://data/resources/LabelSettingsCardText.tres" id="1_ehpgu"]
[ext_resource type="Script" uid="uid://7ylf4nw2jpkt" path="res://game/ui/LevelUI.gd" id="1_jt5pe"]
[ext_resource type="FontFile" uid="uid://r7lmqbnugoso" path="res://assets/fonts/editundo.ttf" id="3_5a7dr"]
[ext_resource type="PackedScene" uid="uid://c10pv5uh6sjhk" path="res://game/ui/NextLevelDialog.tscn" id="4_oudv8"]
[ext_resource type="PackedScene" uid="uid://tgd12r5nx3mq" path="res://game/ui/GameOverDialog.tscn" id="5_grh24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehpgu"]
bg_color = Color(0.9647059, 0.7411765, 0.31764707, 1)

[node name="LevelUI" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 41.0
script = ExtResource("1_jt5pe")

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 4.0
offset_right = 864.0
offset_bottom = 14.75
scale = Vector2(2, 2)
text = "LEVEL: 1"
label_settings = ExtResource("1_ehpgu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrepareYourselfLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 128.0
offset_right = 961.0
offset_bottom = 169.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_5a7dr")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[color=gold ][shake rate=32 level=8]The last wave is approaching"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 189.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[node name="WaveProgress" type="ProgressBar" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 183.0
offset_bottom = 18.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ehpgu")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="NextLevelDialog" parent="." instance=ExtResource("4_oudv8")]
visible = false
layout_mode = 0

[node name="GameOver" parent="." instance=ExtResource("5_grh24")]
visible = false
layout_mode = 1
offset_bottom = 319.0
